# Torrfisk

./: .gitignore  pyproject.toml
tests/utils/: test_bitboard.py  test_utils.py
torrfisk/: enums.py
torrfisk/utils/: __init__.py  bitboard.py  utils.py
